Bug 1693696 - Switch custom window shadows to a different (private) API: Override -[NSWindow shadowOptions] instead of calling CGSSetWindowShadowAndRimParameters. r=mac-reviewers,spohl

CGSSetWindowShadowAndRimParameters was interfering with the window's built-in
mechanism to update shadow styles. The shadowOptions API should be less brittle.

This also lets us get rid of the  hardcoded window shadow parameters, which were
based on macOS Yosemite and which look out of place on Big Sur.

This patch also explicitly makes us only support different shadow types if the
window is a `PopupWindow`. We effectively had the same behavior before, due to
the `canBecomeKeyWindow` check.

This patch also changes how the `default` style is treated: Rather than being
the style for a normal top-level window, it's now the style of a regular
menu/panel. Our arrow panels use `default`, so this makes them look better.
The `StyleWindowShadow::Sheet` value is unused and we now treat it as default.

Differential Revision: https://phabricator.services.mozilla.com/D105709